--- a/assets/css/partials/theme.pcss
+++ b/assets/css/partials/theme.pcss
@@ -60,11 +60,11 @@
 [data-layout] {
   @nest .bootstrap-wrapper & > * { box-sizing: border-box; }
   @nest .bootstrap-wrapper & > :nth-child(1) {
-    width: calc(35% - 1px) !important;
+    width: 100% !important;
     @screen lg { width: calc(28% - 1px) !important; }
   }
   @nest .bootstrap-wrapper & > :nth-child(2) {
-    width: calc(65% + 1px) !important;
+    width: 100% !important;
     @screen lg { width: calc(63% + 1px) !important; }
   }
   @nest .bootstrap-wrapper & > :nth-child(3) {
